Updated for pre-recorded video stream processing
For use with the all-sky camera MPTS recorded streams.

--- a/motion_detector/Makefile
+++ b/motion_detector/Makefile
@@ -9,19 +9,22 @@ CPPLIBS= -L/usr/lib -lopencv_core -lopencv_imgproc -lopencv_flann -lopencv_video
 
 HFILES= 
 CFILES= 
-CPPFILES= motion_detector.cpp
+CPPFILES= motion_detector.cpp video_display.cpp
 
 SRCS= ${HFILES} ${CFILES}
 CPPOBJS= ${CPPFILES:.cpp=.o}
 
-all:	motion_detector
+all:	motion_detector video_display
 
 clean:
 	-rm -f *.o *.d
-	-rm -f motion_detector
+	-rm -f motion_detector video_display
 
 distclean:
 	-rm -f *.o *.d
+
+video_display: video_display.o
+	$(CC) $(LDFLAGS) $(CFLAGS) -o $@ $@.o `pkg-config --libs opencv` $(CPPLIBS)
 
 motion_detector: motion_detector.o
 	$(CC) $(LDFLAGS) $(CFLAGS) -o $@ $@.o `pkg-config --libs opencv` $(CPPLIBS)
